[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "primedelta"
version = "0.1.0"
description = "Prime Delta Python library"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["web3==6.19.0", "siwe==2.4.1", "requests==2.32.3", "sseclient==0.0.27"]

[dependency-groups]
dev = ["pytest>=8.0.0", "python-dotenv>=1.0.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.setuptools.package-data]
"primedelta" = ["networks/*.json", "networks/abis/*.json"]
